adding auth token back into CommonsUser and converting registration form to class based views

--- a/vcweb/static/css/style.css
+++ b/vcweb/static/css/style.css
@@ -136,6 +136,10 @@ fieldset.small>legend {
     text-transform: lowercase;
     padding: 2px 6px;
 }
+.field > input {
+    width: 15em;
+
+}
 #experimentData a {
     text-decoration: none;
 }
