--- a/vcweb/static/css/style.css
+++ b/vcweb/static/css/style.css
@@ -136,9 +136,11 @@ fieldset.small>legend {
     text-transform: lowercase;
     padding: 2px 6px;
 }
-.field > input {
+.field > input[type='text'] {
     width: 15em;
-
+}
+.field > input[type='password'] {
+    width: 15em;
 }
 #experimentData a {
     text-decoration: none;
