restructuring template directories in the core app, adding participant and experiment subdirectories.
--HG--
rename : vcweb/core/templates/base-experimenter.html => vcweb/core/templates/experimenter/base.html
rename : vcweb/core/templates/experimenter-dashboard.html => vcweb/core/templates/experimenter/dashboard.html
rename : vcweb/core/templates/monitor.html => vcweb/core/templates/experimenter/monitor.html
rename : vcweb/core/templates/base-participant.html => vcweb/core/templates/participant/base.html
rename : vcweb/core/templates/participant-dashboard.html => vcweb/core/templates/participant/dashboard.html

--- a/vcweb/forestry/templates/forestry/experimenter-index.html
+++ b/vcweb/forestry/templates/forestry/experimenter-index.html
@@ -1,4 +1,4 @@
-{% extends "base-experimenter.html" %}
+{% extends "experimenter/base.html" %}
 
 {% block title %} Forestry Experimenter Interface {% endblock %}
 
