--- a/vcweb/forestry/templates/forestry/wait.html
+++ b/vcweb/forestry/templates/forestry/wait.html
@@ -1,4 +1,4 @@
-{% extends "base-participant.html" %}
+{% extends "participant/base.html" %}
 {% block head %}
 {{ block.super }}
 {% include "includes/participant.events.html" %}
