--- a/vcweb/core/templates/experimenter/dashboard.html
+++ b/vcweb/core/templates/experimenter/dashboard.html
@@ -1,4 +1,4 @@
-{% extends "base-experimenter.html" %}
+{% extends "experimenter/base.html" %}
 {% block title %}Virtual Commons Web Experimenter Dashboard{% endblock %}
 {% block head %}
 {{ block.super }}
