--- a/vcweb/core/templates/experimenter/monitor.html
+++ b/vcweb/core/templates/experimenter/monitor.html
@@ -1,4 +1,4 @@
-{% extends "base-experimenter.html" %}
+{% extends "experimenter/base.html" %}
 {% block head %}
 {{ block.super }}
 {% include "includes/experimenter.events.html" %}
