--- a/vcweb/forestry/templates/forestry/manage-experiment.html
+++ b/vcweb/forestry/templates/forestry/manage-experiment.html
@@ -1,4 +1,4 @@
-{% extends "base-experimenter.html" %}
+{% extends "experimenter/base.html" %}
 
 {% block title %} Forestry Experiment Management Interface {% endblock %}
 
