--- a/vcweb/forestry/templates/forestry/participate.html
+++ b/vcweb/forestry/templates/forestry/participate.html
@@ -1,4 +1,4 @@
-{% extends "base-participant.html" %}
+{% extends "participant/base.html" %}
 {% block head %}
 {{ block.super }}
 <script type="text/javascript">
