--- a/vcweb/forestry/templates/forestry/quiz.html
+++ b/vcweb/forestry/templates/forestry/quiz.html
@@ -1,4 +1,4 @@
-{% extends "base-participant.html" %}
+{% extends "participant/base.html" %}
 
 {% block title %} Forestry Quiz Round {% endblock %}
 
