adding basic participant registration forms

--- a/vcweb/core/templates/base-vcweb-form.html
+++ b/vcweb/core/templates/base-vcweb-form.html
@@ -2,5 +2,5 @@
 
 {% block head %}
     {{ block.super }}
-    <script type='text/javascript' src='/static/js/jquery.validate.min.js'></script>
+    {% include "includes/jquery.forms.html" %}
 {% endblock head %}
