--- a/vcweb/core/templates/includes/form-as-div.html
+++ b/vcweb/core/templates/includes/form-as-div.html
@@ -1,6 +1,8 @@
 {% for field in form %}
 <div class='field'>
+{% if not field.is_hidden %}
 <span class='label'>{{ field.label_tag }}:</span>
+{% endif %}
 {{ field }}
 {% if field.errors %}
 <label class='error' for='id_{{ field.name }}' generated='true'>{{ field.errors|join:". " }}</label>
