adding help text

--- a/vcweb/core/templates/experimenter/register-participants.html
+++ b/vcweb/core/templates/experimenter/register-participants.html
@@ -13,7 +13,8 @@
 {% block page %}
 <form id='register-participants-form' action='' method='post'>
     <h3>Register participants</h3>
-    <p>Register participants for {{experiment}} below. <span style='padding: 3px;' class='ui-state-highlight'><b>There are currently {{experiment.participants.count}} registered participants.</b></span>
+    <p>Please register participants for {{experiment}}. 
+    <span style='padding: 3px;' class='ui-state-highlight'><b>There are currently {{experiment.participants.count}} registered participants.</b></span>
     {% include "includes/form-as-div.html" %}
 </form>
 {% endblock page %}
