set up django.contrib.staticfiles app so static materials associated with each experiment can live within their own app_name/static/ directories.  Unfortunately since I'd like to still namespace things properly within the final static root, this means we'll need to have directory structures like forestry/static/images/forestry/foo... should see if this can be adjusted or fixed.
--HG--
rename : vcweb/static/images/forestry/deforestation.jpg => vcweb/forestry/static/images/forestry/deforestation.jpg
rename : vcweb/static/images/forestry/logo.png => vcweb/forestry/static/images/forestry/logo.png
rename : vcweb/static/images/forestry/pine-tree.png => vcweb/forestry/static/images/forestry/pine-tree.png

--- a/vcweb/forestry/templates/forestry/wait.html
+++ b/vcweb/forestry/templates/forestry/wait.html
@@ -54,7 +54,7 @@ The facilitator will start the next round when every participant is ready.
                 <th style='width:12em;' class='tooltip' title='The total number of trees harvested by your group in this round.'>
                     Total group harvest decisions (B)
                 </th>
-                <th class='tooltip' title='The trees that regrew during this round.'>Trees regrown (C)</th>
+                <th class='tooltip' title='The trees that regrew during this round (C = (A - B) * .10)'>Trees regrown (C)</th>
                 <th class='tooltip' title='The number of trees available at the end of the round (A - B + C = D).'>Final # trees (D)</th></tr>
         </thead>
         <tbody>
