--- a/vcweb/core/templates/experimenter/register-participants.html
+++ b/vcweb/core/templates/experimenter/register-participants.html
@@ -22,7 +22,9 @@
 {% block page %}
 <form id='register-participants-form' action='' method='post'>
     <h3>Register participants</h3>
-    <p>Please register participants for {{experiment}}. 
+    <p>Please register participants for <span style='padding:1px;' class='info'>{{experiment}}</span>.
+    </p>
+    <p>
     <span style='padding: 3px;' class='ui-state-highlight'><b>There are currently {{experiment.participants.count}} registered participants.</b></span>
     {% include "includes/form-as-div.html" %}
     <div class='submit'>
