fixing form properties (was grabbing the actual form fields instead of the data from the form fields). switching institution URL to urlfield refactored setup_test_participants to use generic register_participants that takes in a list of users or a list of emails. fixing generic views, adding ExperimenterSingleExperimentView that overrides get(..) properly to set self.object and invoke process_experiment.

--- a/vcweb/core/templates/experimenter/register-participants.html
+++ b/vcweb/core/templates/experimenter/register-participants.html
@@ -17,6 +17,7 @@
                 );
             });
             $('#id_experiment_pk').val({{experiment.pk}});
+            $('button').button();
     });
 </script>
 {% endblock %}
@@ -29,7 +30,7 @@
     <span style='padding: 3px;' class='ui-state-highlight'><b>There are currently {{experiment.participants.count}} registered participants.</b></span>
     {% include "includes/form-as-div.html" %}
     <div class='submit'>
-        <input type='submit' value='Register' />
+        <button type='submit'>Register</button>
     </div>
 </form>
 {% endblock page %}
