fixing experimenter goto json request fixing reference to form.institution improving participant tree display div, we don't need a for loop to iterate, just use the repeat-y just like we use repeat-x to determine how many multiples of 20 to include.

--- a/vcweb/core/templates/experimenter/monitor.html
+++ b/vcweb/core/templates/experimenter/monitor.html
@@ -24,7 +24,7 @@
                 confirmable.fastConfirm({
                     questionText: description + " - continue?",
                     onProceed: function(trigger) {
-                        Dajaxice.vcweb.core.experiment_controller(update, {'experiment_id': {{experiment_id}}, 'action':action});
+                        Dajaxice.vcweb.core.experiment_controller(update, {'pk': {{experiment.pk}}, 'action':action});
                         $('#statusDiv').hide('fast');
                         $('#experimentData').hide('fast');
                         $('#statusSpinner').show('fast');
