--- a/vcweb/core/templates/includes/experimenter.events.html
+++ b/vcweb/core/templates/includes/experimenter.events.html
@@ -7,7 +7,7 @@ function createGotoEvent(url) {
     if (! url) {
         url = "participate";
     }
-    return createMessageEvent(url);
+    return createMessageEvent(url, "goto");
 }
 function createConnectionEvent() {
    return createMessageEvent("Initial connection", "connect");
