--- a/vcweb/forestry/templates/forestry/wait.html
+++ b/vcweb/forestry/templates/forestry/wait.html
@@ -37,8 +37,10 @@ Forestry Experiment Round {{ experiment.current_round.round_number }}
 <h3>Waiting for the next round to start</h3>
 <p>
 The facilitator will start the next round when every participant is ready.
+<br/>
 <span class='ui-state-highlight ui-corner-all'>
-    <small><a class='contactIcon' href="#">send a private message to the facilitator</a></small>
+    <small><a class='contactIcon' href="#">send a private message to the facilitator</a>
+        | <a href='participate'>return to participation page</a></small>
 </span>
 <br/>
 </p>
