--- a/vcweb/static/css/guarantee/style.css
+++ b/vcweb/static/css/guarantee/style.css
@@ -75,8 +75,7 @@ img.right {
     text-decoration: none;
     text-align: center;
     font-family: Arial, Helvetica, sans-serif;
-    font-size: 0.8em;
-    font-weight: bold;
+    font-size: 1em;
     color: #FFFFFF;
 }
 
@@ -86,6 +85,7 @@ img.right {
 
 #menu .active a {
     background: url(/static/images/guarantee/img03.gif) no-repeat left top;
+    color: #FFFFF0;
 }
 
 #menu .first {
