fixing invalid HTML, hasty bugfix/workaround for https://bitbucket.org/virtualcommons/vcweb/issue/1/fix-logout-issues

--- a/vcweb/core/templates/registration/login.html
+++ b/vcweb/core/templates/registration/login.html
@@ -24,7 +24,7 @@ $(function() {
     </p>
 
     {% include "includes/form-as-div.html" %}
-    <button type='submit' class='submit'>Login</button>
+    <div><button type='submit' class='submit'>Login</button></div>
 </form>
 
 {% endblock page %}
