--- a/vcweb/forestry/templates/forestry/participate.html
+++ b/vcweb/forestry/templates/forestry/participate.html
@@ -80,9 +80,9 @@ Participating in {{experiment.status_line}}
         </label>
         <input id='harvest-decision-id' style='width: 2em; text-align: right;' type="text" name='harvest_decision' class='required digits' maxlength='1'/>
     </div>
-    <button type='submit'>
-        Harvest
-    </button>
+    <div>
+        <button type='submit'>Harvest</button>
+    </div>
 </form>
 {% else %}
 <div class='alert ui-corner-all'>
