--- a/vcweb/static/css/guarantee/style.css
+++ b/vcweb/static/css/guarantee/style.css
@@ -74,8 +74,8 @@ img.right {
     background: url(/static/images/guarantee/img04.gif) no-repeat left top;
     text-decoration: none;
     text-align: center;
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 1em;
+    font-family: Helvetica, sans-serif;
+    font-size: 0.95em;
     color: #FFFFFF;
 }
 
