--- a/vcweb/core/templates/experimenter/register-participants.html
+++ b/vcweb/core/templates/experimenter/register-participants.html
@@ -29,7 +29,9 @@
     <p>
     <span style='padding: 3px;' class='ui-state-highlight'><b>There are currently {{experiment.participants.count}} registered participants.</b></span>
     {% include "includes/form-as-div.html" %}
-    <button class='submit' type='submit'>Register</button>
-    <button><a href='/dashboard'>Cancel</a></button>
+    <div>
+        <button class='submit' type='submit'>Register</button>
+        <button><a href='/dashboard'>Cancel</a></button>
+    </div>
 </form>
 {% endblock page %}
