improving form-as-div more, adding ability to request experimenter access.

--- a/vcweb/core/templates/base.html
+++ b/vcweb/core/templates/base.html
@@ -42,6 +42,12 @@
             {% endblock %}
         </div>
         <div id='page'>
+            <noscript>
+                <div class='alert alertIcon ui-corner-all'>
+                    Please <b>enable JavaScript</b> before using this site.  <br/>Our
+                    experiments are highly interactive and <b>will not function properly</b> without JavaScript.
+                </div>
+            </noscript>
             {% if messages %}
             <h3>Notifications</h3>
             <ul id='messages' class="messages">
