--- a/vcweb/core/templates/includes/experimenter-nav-menu.html
+++ b/vcweb/core/templates/includes/experimenter-nav-menu.html
@@ -13,7 +13,7 @@
         {% if "experiment" in request.path %}
         <li class='{% active_re request "experiment" %}'><a name='experiment'>Experiment</a></li>
         {% endif %}
-	<li class='{% active request profile %}'><a href='{{ profile }}'>Your Account</a></li>
+	<li class='{% active request profile %}'><a href='{{ profile }}'>Profile</a></li>
 	<li><a href='{{ logout }}'>Logout</a></li>
 </ul>
 </div>
